--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,12 +1,6 @@
 @charset "utf-8";
 
-/*! bulma.io v0.6.1 | MIT License | github.com/jgthms/bulma */
-@import "bulma/utilities/_all";
-@import "bulma/base/_all";
-@import "bulma/elements/_all";
-@import "bulma/components/_all";
-@import "bulma/grid/_all";
-@import "bulma/layout/_all";
+@import "~bulma/bulma.sass";
 
 .footer {
   position: absolute;
