Add initial cart page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,8 +2,8 @@
 
 @import "~bulma/bulma.sass";
 
-.footer {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-}
+//.footer {
+//  position: absolute;
+//  width: 100%;
+//  bottom: 0;
+//}
