--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,21 @@
 @charset "utf-8";
 
-@import "~bulma/bulma.sass";
+@import "~bulma/sass/utilities/initial-variables";
+@import "~bulma/sass/utilities/functions";
 
-//.footer {
-//  position: absolute;
-//  width: 100%;
-//  bottom: 0;
-//}
+$primary: #D9AF7D;
+
+@import "~bulma";
+
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+#main-content {
+  flex: 1 0 auto;
+}
